--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body{
     box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.1);
 
 }
-.img img{
+.hero {
     border-radius: 20px 20px 0 0;
 }
 .title{
@@ -50,7 +50,6 @@ body{
 }
 .sub-card{
     display: flex;
-    justify-content: center;
     align-items: center;
     background-color: var(--very-pale-blue);
     font-size: 12px;
@@ -69,15 +68,13 @@ body{
 }
 .hipertext{
     margin: 0 0 0 25px;
-}
-.hipertext a{
     font-weight: 900;
     color: var(--bright-blue);
 }
-.hipertext a:hover{
+.hipertext:hover{
     color:var(--desaturated-blue);
 }
-.btn button{
+.btn{
     background-color: var(--bright-blue);
     color: var(--very-pale-blue);
     font-weight: 700;
@@ -89,7 +86,7 @@ body{
     cursor: pointer;
     box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.2);
 }
-.btn button:hover{
+.btn:hover{
     filter: brightness(1.25);
 }
 .btn-cancel{
@@ -103,4 +100,23 @@ body{
 }
 .btn-cancel a:hover{
     color:var(--dark-blue);
+}
+
+@media(max-width: 374px){
+    .card,
+    .hero {
+        width: 100%;
+    }
+    .sub-card {
+        margin: 0 25px;
+        justify-content: center;
+        font-size: 3vw;
+    }
+    .sub-card img {
+        width: 12vw;
+    }
+    .btn {
+        margin: 15px 25px;
+        font-size: 3vw;
+    }
 }
