--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ body{
     font-weight: 700;
     font-size: 12px;
     padding: 10px 65px;
-    margin: 15px 0;
+    margin: 15px 50px;
     border-radius: 10px;
     border: none;
     cursor: pointer;
